--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       </div>
       <table>
         <tr>
+          <th>Check</th>
           <th>Vara</th>
           <th>Actions</th>
         </tr>
         <tbody id="varatable">
-      
         </tbody>
       </table>
       <section id="inputForm">
