Tester för spara ny vara OK

--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
         <tr>
           <th>Check</th>
           <th>Vara</th>
-          <th>Actions</th>
+          <th>Handling</th>
         </tr>
         <tbody id="varatable">
         </tbody>
       </table>
       <section id="inputForm">
     </section>
+    <button id="RaderaValda">Radera Valda</button>
+    <button onclick="raderaAlla()" id="RaderaAlla">Radera Alla</button>
     </body>
     </html>
