Test av kryssa vara funkar, samtidigt som jag fixade edit, radera alla och radera valda i Javascript

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
       <h1 class="title">Shoppinglista</h1>
       <div class="input-container">
-        <input type="text" id="item-input" placeholder="Lägg till vara...">
+        <input type="text" id="item-input" placeholder="Lägg till ny vara...">
         <button id="add-button">Lägg till</button>
       </div>
       <table>
@@ -25,7 +25,7 @@
       </table>
       <section id="inputForm">
     </section>
-    <button id="RaderaValda">Radera Valda</button>
+    <button onclick="raderaKryssade()" id="RaderaValda">Radera Valda</button>
     <button onclick="raderaAlla()" id="RaderaAlla">Radera Alla</button>
     </body>
     </html>
