Ändrade desginen på listan, samt ändrade texten i confirm i JS för att de ska bättre passa in då man försöker radera kryssade, alla eller enskilda varor

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         <tr>
           <th>Check</th>
           <th>Vara</th>
-          <th>Handling</th>
+          <th>Redigera</th>
+          <th>Radera</th>
         </tr>
         <tbody id="varatable">
         </tbody>
       </table>
       <section id="inputForm">
     </section>
+    <br>
     <button onclick="raderaKryssade()" id="RaderaValda">Radera Valda</button>
     <button onclick="raderaAlla()" id="RaderaAlla">Radera Alla</button>
     </body>
