--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/huvudsida.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <title>Huvudsida</title>
     <script src="Javascript/huvudsida.js"></script>
 </head>
 <body>
       <h1 class="title">Shoppinglista</h1>
       <div class="input-container">
-        <input type="text" id="item-input" placeholder="Lägg till ny vara...">
-        <button id="add-button">Lägg till</button>
+      <input type="text" id="item-input" placeholder="Lägg till ny vara...">
+      <button id="add-button">Lägg till</button>
       </div>
       <table>
         <tr>
