--- a/index.html
+++ b/index.html
@@ -6,30 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="CSS/huvudsida.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0">
     <title>Huvudsida</title>
-    <script src="Javascript/huvudsida.js"></script>
+    <script src="Javascript/lista.js"></script>
 </head>
 <body>
       <h1 class="title">Shoppinglista</h1>
       <div class="input-container">
-      <input type="text" id="item-input" placeholder="Lägg till ny vara...">
+      <input type="text" id="item-input" placeholder="Lägg till ny lista...">
       <button id="add-button">Lägg till</button>
       </div>
       <table>
         <tr>
-          <th>Check</th>
-          <th>Vara</th>
+          <th>Lista</th>
           <th>Redigera</th>
           <th>Radera</th>
         </tr>
-        <tbody id="varatable">
+        <tbody id="listTable">
         </tbody>
       </table>
-      <section id="inputForm">
-    </section>
     <br>
-    <button onclick="raderaKryssade()" id="RaderaValda">Radera Valda</button>
     <button onclick="raderaAlla()" id="RaderaAlla">Radera Alla</button>
     </body>
     </html>
